--- a/steam-review-scraper.ipynb
+++ b/steam-review-scraper.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +60,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# star wars: squadrons (1222730)\n",
-    "# scrap mechanic (387990)\n",
-    "game_id = 1222730"
+    "#get the list of all steam game ids\n",
+    "# https://api.steampowered.com/ISteamApps/GetAppList/v2/\n",
+    "# get the json from this link\n",
+    "listOfAppIds = []\n",
+    "data = None\n",
+    "import urllib.request, json \n",
+    "with urllib.request.urlopen(\"https://api.steampowered.com/ISteamApps/GetAppList/v2/\") as url:\n",
+    "    data = json.load(url)\n",
+    "\n",
+    "for app in data['applist']['apps']:\n",
+    "    listOfAppIds.append(app['appid'])\n",
+    "    \n",
+    "print(listOfAppIds)\n"
    ]
   },
   {
@@ -80,19 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = 'https://steamcommunity.com/app/{}/positivereviews/?browsefilter=mostrecent'\n",
-    "template_with_language = 'https://steamcommunity.com/app/{}/positivereviews/?browsefilter=mostrecent&filterLanguage=russian'\n",
+    "# template = 'https://steamcommunity.com/app/{}/positivereviews/?browsefilter=mostrecent'\n",
+    "# template_with_language = 'https://steamcommunity.com/app/{}/positivereviews/?browsefilter=mostrecent&filterLanguage=english'\n",
     "\n",
-    "url = template_with_language.format(game_id)"
+    "# url = template_with_language.format(game_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,12 +121,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver.maximize_window()\n",
-    "driver.get(url)"
+    "# game_id = 1222730\n"
    ]
   },
   {
@@ -142,86 +151,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'WebDriver' object has no attribute 'find_elements_by_class_name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb Cell 15\u001b[0m in \u001b[0;36m<cell line: 8>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m running \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mwhile\u001b[39;00m running:\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m# get cards on the page\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m     cards \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39;49mfind_elements_by_class_name(\u001b[39m'\u001b[39m\u001b[39mapphub_Card\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m     \u001b[39mfor\u001b[39;00m card \u001b[39min\u001b[39;00m cards[\u001b[39m-\u001b[39m\u001b[39m20\u001b[39m:]:  \u001b[39m# only the tail end are new cards\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m         \u001b[39m# gamer profile url\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jacky/Desktop/FYP/steam-review-scraper.ipynb#X20sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m         profile_url \u001b[39m=\u001b[39m card\u001b[39m.\u001b[39mfind_element_by_xpath(\u001b[39m'\u001b[39m\u001b[39m.//div[@class=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mapphub_friend_block\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m]/div/a[2]\u001b[39m\u001b[39m'\u001b[39m)\u001b[39m.\u001b[39mget_attribute(\u001b[39m'\u001b[39m\u001b[39mhref\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'WebDriver' object has no attribute 'find_elements_by_class_name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://store.steampowered.com/app/1065910/Samael/ False\n",
+      "https://steamcommunity.com/app/1320710/reviews/?browsefilter=mostrecent&filterLanguage=english True\n",
+      "https://steamcommunity.com/app/1320710/reviews/?browsefilter=mostrecent&filterLanguage=english True\n",
+      "https://steamcommunity.com/app/1320710/reviews/?browsefilter=mostrecent&filterLanguage=english True\n",
+      "https://store.steampowered.com/app/1303860/Polter_Pals/ False\n",
+      "https://store.steampowered.com/app/1264180/Blueplanet_VR/ False\n",
+      "https://steamcommunity.com/app/1210030 False\n",
+      "https://steamcommunity.com/app/1320810/reviews/?browsefilter=mostrecent&filterLanguage=english True\n",
+      "https://steamcommunity.com/app/1223500 False\n",
+      "https://steamcommunity.com/app/1320830/reviews/?browsefilter=mostrecent&filterLanguage=english True\n"
      ]
     }
    ],
    "source": [
-    "# get current position of y scrollbar\n",
-    "last_position = driver.execute_script(\"return window.pageYOffset;\")\n",
     "\n",
-    "reviews = []\n",
-    "review_ids = set()\n",
-    "running = True\n",
+    "for gameId in listOfAppIds:\n",
     "\n",
-    "while running:\n",
-    "    # get cards on the page\n",
-    "    cards = driver.find_elements_by_class_name('apphub_Card')\n",
+    "    template_with_language = 'https://steamcommunity.com/app/{}/reviews/?browsefilter=mostrecent&filterLanguage=english'\n",
     "\n",
-    "    for card in cards[-20:]:  # only the tail end are new cards\n",
+    "    url = template_with_language.format(gameId)\n",
     "\n",
-    "        # gamer profile url\n",
-    "        profile_url = card.find_element_by_xpath('.//div[@class=\"apphub_friend_block\"]/div/a[2]').get_attribute('href')\n",
-    "\n",
-    "        # steam id\n",
-    "        steam_id = profile_url.split('/')[-2]\n",
-    "        \n",
-    "        # check to see if I've already collected this review\n",
-    "        if steam_id in review_ids:\n",
+    "    driver.maximize_window()\n",
+    "    try:\n",
+    "        driver.get(url)\n",
+    "        if driver.current_url == \"https://store.steampowered.com/\":\n",
     "            continue\n",
-    "        else:\n",
-    "            review_ids.add(steam_id)\n",
+    "    except Exception as e:\n",
+    "        continue\n",
     "\n",
-    "        # username\n",
-    "        user_name = card.find_element_by_xpath('.//div[@class=\"apphub_friend_block\"]/div/a[2]').text\n",
+    "    # get current position of y scrollbar\n",
+    "    last_position = driver.execute_script(\"return window.pageYOffset;\")\n",
+    "    from selenium.webdriver.common.by import By\n",
     "\n",
-    "        # language of the review\n",
-    "        date_posted = card.find_element_by_xpath('.//div[@class=\"apphub_CardTextContent\"]/div').text\n",
-    "        review_content = card.find_element_by_xpath('.//div[@class=\"apphub_CardTextContent\"]').text.replace(date_posted,'').strip()    \n",
+    "    reviews = []\n",
+    "    review_ids = set()\n",
+    "    running = True\n",
     "\n",
-    "        # review length\n",
-    "        review_length = len(review_content.replace(' ', ''))    \n",
-    "\n",
-    "        # recommendation\n",
-    "        thumb_text = card.find_element_by_xpath('.//div[@class=\"reviewInfo\"]/div[2]').text\n",
-    "        thumb_text    \n",
-    "\n",
-    "        # amount of play hours\n",
-    "        play_hours = card.find_element_by_xpath('.//div[@class=\"reviewInfo\"]/div[3]').text\n",
-    "        play_hours    \n",
-    "\n",
-    "        # save review\n",
-    "        review = (steam_id, profile_url, review_content, thumb_text, review_length, play_hours, date_posted)\n",
-    "        reviews.append(review)    \n",
-    "        \n",
-    "    # attempt to scroll down thrice.. then break\n",
-    "    scroll_attempt = 0\n",
-    "    while True:\n",
-    "        driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")    \n",
-    "        sleep(0.5)\n",
-    "        curr_position = driver.execute_script(\"return window.pageYOffset;\")\n",
-    "        \n",
-    "        if curr_position == last_position:\n",
-    "            scroll_attempt += 1\n",
-    "            sleep(0.5)\n",
-    "            \n",
-    "            if curr_position >= 3:\n",
-    "                running = False\n",
+    "    while running:\n",
+    "        # get cards on the page, skip if no cards\n",
+    "        try:\n",
+    "            cards = driver.find_elements(By.CLASS_NAME,'apphub_Card')\n",
+    "            # if driver.current_url == \"https://store.steampowered.com/app/\" + str(gameId):\n",
+    "            # if url does not begin with https://store.steampowered.com/app/str(gameId)/reviews\n",
+    "            print(driver.current_url,driver.current_url.startswith(\"https://steamcommunity.com/app/\" + str(gameId) + \"/reviews\"))\n",
+    "            if driver.current_url.startswith(\"https://steamcommunity.com/app/\" + str(gameId) + \"/reviews\") == False:\n",
     "                break\n",
-    "        else:\n",
-    "            last_position = curr_position\n",
-    "            break  # continue scraping the results\n",
+    "                continue\n",
+    "            if len(cards) == 0:\n",
+    "                break\n",
+    "                continue\n",
+    "    \n",
+    "            for card in cards[-20:]:  # only the tail end are new cards\n",
+    "\n",
+    "                # gamer profile url\n",
+    "                profile_url = card.find_element(By.XPATH,'.//div[@class=\"apphub_friend_block\"]/div/a[2]').get_attribute('href')\n",
+    "\n",
+    "                # steam id\n",
+    "                steam_id = profile_url.split('/')[-2]\n",
+    "                \n",
+    "                # check to see if I've already collected this review\n",
+    "                if steam_id in review_ids:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    review_ids.add(steam_id)\n",
+    "\n",
+    "                # username\n",
+    "                user_name = card.find_element(By.XPATH,'.//div[@class=\"apphub_friend_block\"]/div/a[2]').text\n",
+    "\n",
+    "                # language of the review\n",
+    "                date_posted = card.find_element(By.XPATH,'.//div[@class=\"apphub_CardTextContent\"]/div').text\n",
+    "                review_content = card.find_element(By.XPATH,'.//div[@class=\"apphub_CardTextContent\"]').text.replace(date_posted,'').strip()    \n",
+    "\n",
+    "                # review length\n",
+    "                review_length = len(review_content.replace(' ', ''))    \n",
+    "\n",
+    "                # recommendation\n",
+    "                thumb_text = card.find_element(By.XPATH,'.//div[@class=\"reviewInfo\"]/div[2]').text\n",
+    "                thumb_text    \n",
+    "\n",
+    "                # amount of play hours\n",
+    "                play_hours = card.find_element(By.XPATH,'.//div[@class=\"reviewInfo\"]/div[3]').text\n",
+    "                play_hours    \n",
+    "\n",
+    "                # save review\n",
+    "                review = (gameId ,steam_id, profile_url, review_content, thumb_text, review_length, play_hours, date_posted)\n",
+    "                reviews.append(review)    \n",
+    "                \n",
+    "            # attempt to scroll down thrice.. then break\n",
+    "            scroll_attempt = 0\n",
+    "            while True:\n",
+    "                driver.execute_script(\"window.scrollTo(0, document.body.scrollHeight);\")    \n",
+    "                sleep(0.5)\n",
+    "                curr_position = driver.execute_script(\"return window.pageYOffset;\")\n",
+    "                \n",
+    "                if curr_position == last_position:\n",
+    "                    scroll_attempt += 1\n",
+    "                    sleep(0.5)\n",
+    "                    \n",
+    "                    if curr_position >= 3:\n",
+    "                        running = False\n",
+    "                        break\n",
+    "                else:\n",
+    "                    last_position = curr_position\n",
+    "                    break  # continue scraping the results\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            continue\n",
+    "        \n",
+    "        today = datetime.today().strftime('%Y%m%d')   \n",
+    "        with open(f'Steam_Reviews__{today}.csv', 'a', newline='', encoding='utf-8') as f:\n",
+    "            writer = csv.writer(f)\n",
+    "            writer.writerow([\"GameId\",'SteamId', 'ProfileURL', 'ReviewText', 'Review', 'ReviewLength(Chars)', 'PlayHours', 'DatePosted'])\n",
+    "            writer.writerows(reviews)\n",
+    "\n",
     "\n",
     "# shutdown the web driver\n",
     "driver.close()"
@@ -247,16 +297,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# save the file to Excel Worksheet\n",
-    "wb = Workbook()\n",
-    "ws = wb.worksheets[0]\n",
-    "ws.append(['SteamId', 'ProfileURL', 'ReviewText', 'Review', 'ReviewLength(Chars)', 'PlayHours', 'DatePosted'])\n",
-    "for row in reviews:\n",
-    "    ws.append(row)\n",
+    "# # save the file to Excel Worksheet\n",
+    "# wb = Workbook()\n",
+    "# ws = wb.worksheets[0]\n",
+    "# ws.append([\"GameId\",'SteamId', 'ProfileURL', 'ReviewText', 'Review', 'ReviewLength(Chars)', 'PlayHours', 'DatePosted'])\n",
+    "# for row in reviews:\n",
+    "#     ws.append(row)\n",
     "    \n",
-    "today = datetime.today().strftime('%Y%m%d')    \n",
-    "wb.save(f'Steam_Reviews_{game_id}_{today}.xlsx')    \n",
-    "wb.close()"
+    "# today = datetime.today().strftime('%Y%m%d')    \n",
+    "# wb.save(f'Steam_Reviews_{game_id}_{today}.xlsx')    \n",
+    "# wb.close()"
    ]
   },
   {
@@ -266,11 +316,11 @@
    "outputs": [],
    "source": [
     "# save the file to a CSV file\n",
-    "today = datetime.today().strftime('%Y%m%d')   \n",
-    "with open(f'Steam_Reviews_{game_id}_{today}.csv', 'w', newline='', encoding='utf-8') as f:\n",
-    "    writer = csv.writer(f)\n",
-    "    writer.writerow(['SteamId', 'ProfileURL', 'ReviewText', 'Review', 'ReviewLength(Chars)', 'PlayHours', 'DatePosted'])\n",
-    "    writer.writerows(reviews)"
+    "# today = datetime.today().strftime('%Y%m%d')   \n",
+    "# with open(f'Steam_Reviews_{game_id}_{today}.csv', 'w', newline='', encoding='utf-8') as f:\n",
+    "#     writer = csv.writer(f)\n",
+    "#     writer.writerow([\"GameId\",'SteamId', 'ProfileURL', 'ReviewText', 'Review', 'ReviewLength(Chars)', 'PlayHours', 'DatePosted'])\n",
+    "#     writer.writerows(reviews)"
    ]
   }
  ],
