[NLP] Merge changes from window notebook
Add time.sleep(5) for loading email dialog in hkuchatgpt.py

read_dataset_from_pickle.ipynb: resolve conflicts.

--- a/NLP/sa_hkuchatgpt/read_dataset_from_pickle.ipynb
+++ b/NLP/sa_hkuchatgpt/read_dataset_from_pickle.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "Read df from pickle file\n",
     "\n",
-    "And provide a step-by-step inspection to amend latest checkpoint file, and save the amended chkpt as a new file\n",
-    "1. Edit 'NA' sentiments\n",
-    "2. Edit error results"
+    "Amend rows the rows that\n",
+    "1. received 'NA'\n",
+    "2. Skipped because of whatever error (e.g. content does not pass chatgpt check)"
    ]
   },
   {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/sa_hkuchatgpt/dataset_cleaned_heartless_sampled_20230927/dataset_cleaned_heartless_sampled_20230927_chunk_002/dataset_cleaned_heartless_sampled_20230927_chunk_002_ckpt_089.pkl\n",
-      "89\n"
+      "C:\\Users\\uset\\Documents\\MyDocs\\HKU\\COMP4801\\FYP\\NLP\\sa_hkuchatgpt\\dataset_cleaned_heartless_sampled_20230927\\dataset_cleaned_heartless_sampled_20230927_chunk_000\\dataset_cleaned_heartless_sampled_20230927_chunk_000_ckpt_074.pkl\n",
+      "74\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -106,54 +106,134 @@
      "text": [
       "\n",
       "\n",
-      "Successfully loaded df from /Users/michaelcheng/Documents/MyDocs/HKU/COMP4801 FYP/FYP/NLP/sa_hkuchatgpt/dataset_cleaned_heartless_sampled_20230927/dataset_cleaned_heartless_sampled_20230927_chunk_002/dataset_cleaned_heartless_sampled_20230927_chunk_002_ckpt_089.pkl\n",
-      "   dataset_index  app_id                                   app_name  \\\n",
-      "0         949538  212680                     FTL: Faster Than Light   \n",
-      "1         417579   19680                     Alice: Madness Returns   \n",
-      "2        2140029  238460                        BattleBlock Theater   \n",
-      "3         491994  201810                 Wolfenstein: The New Order   \n",
-      "4        3303632  272010              Aveyond 3-1: Lord of Twilight   \n",
-      "5        2332077   24240                          PAYDAY: The Heist   \n",
-      "6        3716973  296970  Renowned Explorers: International Society   \n",
-      "7        4356375  333970                             A Druid's Duel   \n",
-      "8        2890444  253710                          theHunter Classic   \n",
-      "9        4735687  363970                             Clicker Heroes   \n",
+      "Successfully loaded df from C:\\Users\\uset\\Documents\\MyDocs\\HKU\\COMP4801\\FYP\\NLP\\sa_hkuchatgpt\\dataset_cleaned_heartless_sampled_20230927\\dataset_cleaned_heartless_sampled_20230927_chunk_000\\dataset_cleaned_heartless_sampled_20230927_chunk_000_ckpt_074.pkl\n",
+      "    dataset_index  app_id                                      app_name  \\\n",
+      "0         2265312  240760                                   Wasteland 2   \n",
+      "1         4343173  333930                                    Dirty Bomb   \n",
+      "2         4866998  374320                               DARK SOULS™ III   \n",
+      "3          456459  200510                           XCOM: Enemy Unknown   \n",
+      "4         2630163  250320                             The Wolf Among Us   \n",
+      "5         2170080  238960                                 Path of Exile   \n",
+      "6         3320506  273350                                Evolve Stage 2   \n",
+      "7          199760  107410                                        Arma 3   \n",
+      "8         5076374  391040                                       F1 2016   \n",
+      "9         4886019  375950                                        Viridi   \n",
+      "10        5069569   39000                                Moonbase Alpha   \n",
+      "11        2419054  243470                                    Watch_Dogs   \n",
+      "12        5117630  391540                                     Undertale   \n",
+      "13         991191  214360                                    Tower Wars   \n",
+      "14        1768416  228400  ACE COMBAT™ ASSAULT HORIZON Enhanced Edition   \n",
+      "15        5748532   47890                                The Sims(TM) 3   \n",
+      "16        5410287  418240          Shadow Tactics: Blades of the Shogun   \n",
+      "17        2197336  239140                                   Dying Light   \n",
+      "18        4866656  374320                               DARK SOULS™ III   \n",
+      "19        5694619  461560                                      Mandagon   \n",
+      "20        1082323  218230                                  PlanetSide 2   \n",
+      "21        4919330  379720                                          DOOM   \n",
+      "22        2055332  236390                                   War Thunder   \n",
+      "23        4005927  311340             METAL GEAR SOLID V: GROUND ZEROES   \n",
+      "24        5840104   49520                                 Borderlands 2   \n",
+      "25        1533621   22370          Fallout 3 - Game of the Year Edition   \n",
+      "26        2689892  251170                                        Damned   \n",
+      "27        2656848  250620                               Among the Sleep   \n",
+      "28        1625624  224760                                           FEZ   \n",
+      "29         556434  203750                                 Binary Domain   \n",
       "\n",
-      "                                         review_text  review_score  \\\n",
-      "0  Amazing Game! Great Gameplay, and Great Re-pla...             1   \n",
-      "1  This game is fantastic!  It is both fun to pla...             1   \n",
-      "2  Dripping with fun, oozing with style, practica...             1   \n",
-      "3  Great story-driven game - one of the better st...             1   \n",
-      "4  Haven't played much of it yet but it seems lik...            -1   \n",
-      "5                                         great game             1   \n",
-      "6  Extremely fun game with a charming aesthetic a...             1   \n",
-      "7  'A good game for what it is, which is sort of ...             1   \n",
-      "8  i love this game i think how its so simple and...             1   \n",
-      "9                This game gave my index finger aids             1   \n",
+      "                                          review_text  review_score  \\\n",
+      "0   If you're hoping for anything like fallout 1 &...            -1   \n",
+      "1              The version of Brink that doesn't suck             1   \n",
+      "2             oh my got, 10 casuls of 10. now get gut             1   \n",
+      "3   A very engaging turn pased stratigy game. Any ...             1   \n",
+      "4   9.5/10 Great story. word can't do this one jus...             1   \n",
+      "5   Having finished the game on the normal difficu...             1   \n",
+      "6                                         awsome game             1   \n",
+      "7   This game is damn right amazing if you're into...             1   \n",
+      "8   Carreer mode is great fun. While familiarizing...             1   \n",
+      "9   It is what it says it is. Great soundtrack whi...             1   \n",
+      "10  Try out the NASA Moonbase Alpha simulation. A ...             1   \n",
+      "11  I got this game and so far have spent 1.7 hour...            -1   \n",
+      "12  Amazing game. Get this if you want something i...             1   \n",
+      "13  I do like this game, however, the fact that th...             1   \n",
+      "14  Im only saying this game SUKZ cause my dad lik...            -1   \n",
+      "15    Please help then I can give a higher review....            -1   \n",
+      "16  The game that I have been searching for the la...             1   \n",
+      "17  One of the better Zombie games out there, Very...             1   \n",
+      "18  Not as good as the others honestly. But still ...             1   \n",
+      "19  I'd love to tell you why this game is good, bu...             1   \n",
+      "20                A really great First Person Shooter             1   \n",
+      "21  Forget your GF. This games music will give you...             1   \n",
+      "22  The BEST historical flight sim where you can f...             1   \n",
+      "23  All aboard the Phantom Pain hype train. Choo C...             1   \n",
+      "24  You're a vault hunter on an alien planet. The ...             1   \n",
+      "25  9001 times better than dota 2 and skyrm and th...             1   \n",
+      "26  The game is slow, the maps are bad, bad object...            -1   \n",
+      "27  Just wanted to chime in and state that this wa...             1   \n",
+      "28  Clever, fun, pretty. Perfect little game. Must...             1   \n",
+      "29  'That was SWEEET!' Really enjoyable game, char...             1   \n",
       "\n",
-      "   review_votes                                           response  \\\n",
-      "0             0  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
-      "1             0  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
-      "2             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "3             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "4             0  {\"positive\": 0.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "5             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "6             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "7             0  {\\n    \"positive\": 1.0,\\n    \"neutral\": 0.0,\\n...   \n",
-      "8             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
-      "9             0       {\"positive\": 0, \"neutral\": 0, \"negative\": 1}   \n",
+      "    review_votes                                           response  \\\n",
+      "0              1  {\"positive\": 0.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "1              1       {\"positive\": 1, \"neutral\": 0, \"negative\": 0}   \n",
+      "2              1   {\"positive\": 0.9, \"neutral\": 0.1, \"negative\": 0}   \n",
+      "3              0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "4              0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "5              0  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
+      "6              0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "7              0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "8              0  {\\n  \"positive\": 0.8,\\n  \"neutral\": 0.1,\\n  \"n...   \n",
+      "9              0  {\\n    \"positive\": 1.0,\\n    \"neutral\": 0.0,\\n...   \n",
+      "10             0   {\"positive\": 0.8, \"neutral\": 0.2, \"negative\": 0}   \n",
+      "11             0  {\"positive\": 0.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "12             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "13             0  {\"positive\": 0.6, \"neutral\": 0.2, \"negative\": ...   \n",
+      "14             1  {\\n    \"positive\": 0,\\n    \"neutral\": 0,\\n    ...   \n",
+      "15             1  {\\n    \"positive\": 0.0,\\n    \"neutral\": 0.5,\\n...   \n",
+      "16             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "17             0   {\"positive\": 0.8, \"neutral\": 0.2, \"negative\": 0}   \n",
+      "18             1  {\\n  \"positive\": 0.5,\\n  \"neutral\": 0.5,\\n  \"n...   \n",
+      "19             0  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
+      "20             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "21             1  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
+      "22             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "23             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "24             0  {\\n  \"positive\": 0.9,\\n  \"neutral\": 0.1,\\n  \"n...   \n",
+      "25             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "26             0  {\\n  \"positive\": 0,\\n  \"neutral\": 0.2,\\n  \"neg...   \n",
+      "27             0  {\"positive\": 1.0, \"neutral\": 0.0, \"negative\": ...   \n",
+      "28             0  {\\n  \"positive\": 1.0,\\n  \"neutral\": 0.0,\\n  \"n...   \n",
+      "29             0  {\\n  \"positive\": 0.8,\\n  \"neutral\": 0.1,\\n  \"n...   \n",
       "\n",
-      "   total_token_used  \n",
-      "0               150  \n",
-      "1               195  \n",
-      "2               155  \n",
-      "3               149  \n",
-      "4               260  \n",
-      "5               121  \n",
-      "6               147  \n",
-      "7               459  \n",
-      "8               203  \n",
-      "9               117  \n"
+      "    total_token_used  \n",
+      "0                174  \n",
+      "1                120  \n",
+      "2                132  \n",
+      "3                171  \n",
+      "4                163  \n",
+      "5                352  \n",
+      "6                121  \n",
+      "7                171  \n",
+      "8                262  \n",
+      "9                142  \n",
+      "10               162  \n",
+      "11               219  \n",
+      "12               154  \n",
+      "13               240  \n",
+      "14               176  \n",
+      "15               172  \n",
+      "16               266  \n",
+      "17               161  \n",
+      "18               162  \n",
+      "19               213  \n",
+      "20               123  \n",
+      "21               140  \n",
+      "22               132  \n",
+      "23               138  \n",
+      "24               357  \n",
+      "25               169  \n",
+      "26               149  \n",
+      "27               182  \n",
+      "28               136  \n",
+      "29               274  \n"
      ]
     }
    ],
