[NLP] Add BERT notebooks

--- a/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb
+++ b/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb
@@ -316,9 +316,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/root/.local/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Downloading (…)okenizer_config.json: 100%|██████████| 29.0/29.0 [00:00<00:00, 15.4kB/s]\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████| 570/570 [00:00<00:00, 382kB/s]\n",
+      "Downloading (…)solve/main/vocab.txt: 100%|██████████| 213k/213k [00:00<00:00, 547kB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 436k/436k [00:00<00:00, 10.0MB/s]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'sentences_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb Cell 18\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m tokenizer \u001b[39m=\u001b[39m AutoTokenizer\u001b[39m.\u001b[39mfrom_pretrained(\u001b[39m\"\u001b[39m\u001b[39mbert-base-cased\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# tokenizer takes a list of strings\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m tokenized_data \u001b[39m=\u001b[39m tokenizer(sentences_train, return_tensors\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mnp\u001b[39m\u001b[39m\"\u001b[39m, padding\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, max_length\u001b[39m=\u001b[39m\u001b[39m512\u001b[39m, truncation\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# Tokenizer returns a BatchEncoding, but we convert that to a dict for Keras\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/root/FYP/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-example.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m tokenized_data \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m(tokenized_data)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sentences_train' is not defined"
+     ]
+    }
+   ],
    "source": [
     "from transformers import AutoTokenizer\n",
     "import numpy as np\n",
