Add insignificant comments to demo scripts

--- a/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-sa-gamereviews.ipynb
+++ b/NLP/dev-workspace/sa/demo_13-10-2023/bert-finetune-sa-gamereviews.ipynb
@@ -549,39 +549,39 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_0abf5_row0_col0, #T_0abf5_row0_col1 {\n",
+       "#T_306ce_row0_col0, #T_306ce_row0_col1 {\n",
        "  background-color: #fcfbfd;\n",
        "  color: #000000;\n",
        "}\n",
-       "#T_0abf5_row1_col0, #T_0abf5_row1_col1 {\n",
+       "#T_306ce_row1_col0, #T_306ce_row1_col1 {\n",
        "  background-color: #3f007d;\n",
        "  color: #f1f1f1;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_0abf5\">\n",
+       "<table id=\"T_306ce\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_0abf5_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
-       "      <th id=\"T_0abf5_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
+       "      <th id=\"T_306ce_level0_col0\" class=\"col_heading level0 col0\" >review_score</th>\n",
+       "      <th id=\"T_306ce_level0_col1\" class=\"col_heading level0 col1\" >review_text</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_0abf5_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_0abf5_row0_col0\" class=\"data row0 col0\" >0</td>\n",
-       "      <td id=\"T_0abf5_row0_col1\" class=\"data row0 col1\" >780927</td>\n",
+       "      <th id=\"T_306ce_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_306ce_row0_col0\" class=\"data row0 col0\" >0</td>\n",
+       "      <td id=\"T_306ce_row0_col1\" class=\"data row0 col1\" >780927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_0abf5_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_0abf5_row1_col0\" class=\"data row1 col0\" >1</td>\n",
-       "      <td id=\"T_0abf5_row1_col1\" class=\"data row1 col1\" >4110332</td>\n",
+       "      <th id=\"T_306ce_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_306ce_row1_col0\" class=\"data row1 col0\" >1</td>\n",
+       "      <td id=\"T_306ce_row1_col1\" class=\"data row1 col1\" >4110332</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fdb7bf9e250>"
+       "<pandas.io.formats.style.Styler at 0x7fc68c17c7c0>"
       ]
      },
      "execution_count": 13,
@@ -647,15 +647,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "validation set\n",
+      "review_score\n",
+      "1    822167\n",
+      "0    156085\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "train-test set\n",
+      "review_score\n",
+      "1    3288165\n",
+      "0     624842\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# distribution of +ve and -ve comments in train/test and valid\n",
+    "print('validation set')\n",
+    "print(y_valid.value_counts())\n",
+    "print()\n",
+    "print('train-test set')\n",
+    "print(y_train_test.value_counts())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then we create a balanced dataset for training and testing"
+    "Then we create a (roughly) balanced dataset for training and testing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -702,6 +734,34 @@
     "print(len(y_train))\n",
     "print(len(X_test))\n",
     "print(len(y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "training set\n",
+      "Counter({0: 562425, 1: 562290})\n",
+      "\n",
+      "testing set\n",
+      "Counter({1: 62552, 0: 62417})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# distribution of +ve and -ve comments in train and test set\n",
+    "import collections\n",
+    "\n",
+    "print('training set')\n",
+    "print(collections.Counter(y_train))\n",
+    "print()\n",
+    "print('testing set')\n",
+    "print(collections.Counter(y_test))"
    ]
   },
   {
