--- a/NLP/dev-workspace/sa/demo_16-09-2023/sentiment_anal_test_16-09-2023.ipynb
+++ b/NLP/dev-workspace/sa/demo_16-09-2023/sentiment_anal_test_16-09-2023.ipynb
@@ -1500,7 +1500,7 @@
     "    # keras.metrics.Recall(name=\"recall\")\n",
     "]\n",
     "model_oversampling.compile(\n",
-    "    loss=\"sparse_categorical_crossentropy\", optimizer='adam', metrics=metrics, weighted_metrics=keras.metrics.SparseCategoricalAccuracy('sparse_categorical_accuracy_weighted')\n",
+    "    loss=\"sparse_categorical_crossentropy\", optimizer='adam', metrics=metrics\n",
     ")\n",
     "\n",
     "# model.compile(\n",
@@ -1516,7 +1516,7 @@
     "history_oversampling = model_oversampling.fit(\n",
     "    X_train_reasampled_vec, \n",
     "    y_train_resampled_arr, \n",
-    "    batch_size=128,                 # TODO: test changing the batch size to include negative samples at each batch (update gradient...) \n",
+    "    batch_size=128,\n",
     "    epochs=20, \n",
     "    validation_data=(X_test_vec, y_test_arr),\n",
     "    callbacks=[callback]\n",
