--- a/NLP/dev-workspace/sa/demo_16-09-2023/sentiment_anal_test_17-09-2023.ipynb
+++ b/NLP/dev-workspace/sa/demo_16-09-2023/sentiment_anal_test_17-09-2023.ipynb
@@ -850,6 +850,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a vocabulary index\n",
+    "\n",
+    "Let's use the TextVectorization to index the vocabulary found in the dataset. Later, we'll use the same layer instance to vectorize the samples.\n",
+    "\n",
+    "Our layer will only consider the top 20,000 words, and will truncate or pad sequences to be actually 200 tokens long."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
