Add BERT evaluation ipynb
But the evaluation is slow on large dataset (takes 20+min on imbal dataset)

Plan to write a script to evaluate all models at once, and then save the result as numpy object

So that when we want to evaluate once again, we only need to load the numpy object instead of doing evaluation again.

--- a/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune-baseline.ipynb
+++ b/NLP/dev-workspace/sa/bert_2023-12-13/bert-finetune-baseline.ipynb
@@ -1521,7 +1521,7 @@
     "from transformers import pipeline\n",
     "\n",
     "tokenizer_loaded = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
-    "model_loaded = AutoModelForSequenceClassification.from_pretrained('test_trainer_save_model_24-11-2023_v5', output_hidden_states=True)\n",
+    "model_loaded = AutoModelForSequenceClassification.from_pretrained('test_trainer_save_model_24-11-2023_v5')\n",
     "\n",
     "# just load the model\n",
     "# trainer_test = Trainer(\n",
