Auto stash before merge of "nlp-dev" and "origin/nlp-dev"
WIP evaluation scripts

--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
@@ -253,11 +253,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-18 18:32:13.407609: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Max\n",
-      "2023-12-18 18:32:13.407634: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 32.00 GB\n",
-      "2023-12-18 18:32:13.407637: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 10.67 GB\n",
-      "2023-12-18 18:32:13.407714: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
-      "2023-12-18 18:32:13.407905: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
+      "2023-12-19 15:31:47.563873: I metal_plugin/src/device/metal_device.cc:1154] Metal device set to: Apple M1 Max\n",
+      "2023-12-19 15:31:47.563939: I metal_plugin/src/device/metal_device.cc:296] systemMemory: 32.00 GB\n",
+      "2023-12-19 15:31:47.563946: I metal_plugin/src/device/metal_device.cc:313] maxCacheSize: 10.67 GB\n",
+      "2023-12-19 15:31:47.564033: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:306] Could not identify NUMA node of platform GPU ID 0, defaulting to 0. Your kernel may not have been built with NUMA support.\n",
+      "2023-12-19 15:31:47.564081: I tensorflow/core/common_runtime/pluggable_device/pluggable_device_factory.cc:272] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 0 MB memory) -> physical PluggableDevice (device: 0, name: METAL, pci bus id: <undefined>)\n",
       "WARNING:absl:At this time, the v2.11+ optimizer `tf.keras.optimizers.Adam` runs slowly on M1/M2 Macs, please use the legacy Keras optimizer instead, located at `tf.keras.optimizers.legacy.Adam`.\n"
      ]
     },
@@ -295,6 +295,60 @@
     "\n",
     "print('Loaded text vectorizer from {}'.format(text_vectorizer_path))\n",
     "print('Loaded model from {}'.format(model_path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"model\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " input_1 (InputLayer)        [(None, None)]            0         \n",
+      "                                                                 \n",
+      " embedding (Embedding)       (None, None, 100)         2000200   \n",
+      "                                                                 \n",
+      " conv1d (Conv1D)             (None, None, 128)         38528     \n",
+      "                                                                 \n",
+      " max_pooling1d (MaxPooling1  (None, None, 128)         0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv1d_1 (Conv1D)           (None, None, 128)         82048     \n",
+      "                                                                 \n",
+      " max_pooling1d_1 (MaxPoolin  (None, None, 128)         0         \n",
+      " g1D)                                                            \n",
+      "                                                                 \n",
+      " dropout (Dropout)           (None, None, 128)         0         \n",
+      "                                                                 \n",
+      " conv1d_2 (Conv1D)           (None, None, 64)          41024     \n",
+      "                                                                 \n",
+      " global_max_pooling1d (Glob  (None, 64)                0         \n",
+      " alMaxPooling1D)                                                 \n",
+      "                                                                 \n",
+      " dropout_1 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dropout_2 (Dropout)         (None, 64)                0         \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 2)                 130       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 2166090 (8.26 MB)\n",
+      "Trainable params: 165890 (648.01 KB)\n",
+      "Non-trainable params: 2000200 (7.63 MB)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
    ]
   },
   {
@@ -372,6 +426,35 @@
    "metadata": {},
    "source": [
     "on test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_metrics_folder = Path.joinpath(training_storing_folder, 'eval_metrics')\n",
+    "\n",
+    "if not eval_metrics_folder.exists():\n",
+    "    eval_metrics_folder.mkdir()\n",
+    "\n",
+    "eval_test_prefix = 'test'\n",
+    "eval_valid_bal_prefix = 'valid_bal'\n",
+    "eval_valid_imbal_prefix = 'valid_imbal'\n",
+    "\n",
+    "eval_test_folder = Path.joinpath(eval_metrics_folder, eval_test_prefix)\n",
+    "eval_valid_bal_folder = Path.joinpath(eval_metrics_folder, eval_valid_bal_prefix)\n",
+    "eval_valid_imbal_folder = Path.joinpath(eval_metrics_folder, eval_valid_imbal_prefix)\n",
+    "\n",
+    "if not eval_test_folder.exists():\n",
+    "    eval_test_folder.mkdir()\n",
+    "\n",
+    "if not eval_valid_bal_folder.exists():\n",
+    "    eval_valid_bal_folder.mkdir()\n",
+    "\n",
+    "if not eval_valid_imbal_folder.exists():\n",
+    "    eval_valid_imbal_folder.mkdir()"
    ]
   },
   {
@@ -469,8 +552,9 @@
     "evaluation_functions.create_confusion_matrix_graph(\n",
     "    y_test,\n",
     "    y_test_pred,\n",
-    "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-training-data test-set',\n",
-    "    save=False\n",
+    "    f'Confusion matrix {DATASET_SIZE}K-{\"bal\" if DATASET_IS_BALANCED else \"imbal\"}-train test-set',\n",
+    "    save=False,\n",
+    "    save_filename=Path.joinpath(eval_test_folder, 'confusion_matrix_test.png')\n",
     ")"
    ]
   },
