--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
@@ -722,7 +722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# shuffle the training dataset, as we want to randomize the training process\n",
+    "buffer_size = 10000\n",
+    "\n",
+    "train_dataset = train_dataset.shuffle(buffer_size=buffer_size, reshuffle_each_iteration=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
