Rewrite dataset_loader script and add dataset shuffle
Rewrite dataset_loader.py script to split loading training/testing dataset and validation set

Add dataset shuffling to TFIDF-RF and GloVe-CNN training script. Models will not be fed with the same sequence of data in their epoch.

--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/evaluation_script.ipynb
@@ -434,6 +434,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create folders for storing evaluation metrics\n",
+    "\n",
     "eval_metrics_folder = Path.joinpath(training_storing_folder, 'eval_metrics')\n",
     "\n",
     "if not eval_metrics_folder.exists():\n",
