--- a/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
+++ b/NLP/dev-workspace/sa/glove-cnn_2023-12-12/glove_cnn_training_script.ipynb
@@ -124,9 +124,9 @@
     "# training_args_datetime = datetime(year=2023, month=12, day=18)\n",
     "# training_storing_folder = Path(training_name).resolve()\n",
     "\n",
-    "dataset_traintest, X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_presampled_dataset(DATASET_SIZE, DATASET_IS_BALANCED)\n",
+    "X_imbal_valid, y_imbal_valid, X_bal_valid, y_bal_valid = dataset_loader.load_presampled_validation_dataset()\n",
     "\n",
-    "X_train, X_test, y_train, y_test = dataset_loader.create_traintest_dataset(dataset_traintest)"
+    "X_train, X_test, y_train, y_test = dataset_loader.load_presampled_traintest_dataset(DATASET_SIZE, DATASET_IS_BALANCED)"
    ]
   },
   {
